discussion/kv_engine/186655/186655_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55268: Disable tcache usage for reader/writer pool threads

We can have a lot of those threads, especially in disk_io_optimised
configurations (CPU cores x 2 threads). We create one tcache per arena
(1-1 bucket), so if we have 128 r/w threads and 30 buckets that is 3840
tcaches.

The maximum supported number of tcaches is 4094, so if we allocate 3840
to r/w threads we won't have enough for frontend and other threads,
where tcaches are very needed.

Disable tcaches for the r/w threads to conserve the available tcaches
for other uses.

Change-Id: I72e63a44a956d50ec2ba935481b2beadff49cdf3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2023-02-13 15:25:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-13 15:26:12.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337640/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-13 15:33:14.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1118/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/executor/folly_executorpool.cc:58:30: error: no type named "setThreadTCacheEnabled" in "cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >" [clang-diagnostic-error]
            cb::ArenaMalloc::setThreadTCacheEnabled(tcacheEnabled);
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1118/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/executor/folly_executorpool.cc:58:30:
error: no type named "setThreadTCacheEnabled" in "cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1118/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22656/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2023-02-24 17:05:27.000000000
Message: 
Abandoned

This is no longer the approach we're taking. See merged changes.
----------------------------------------------------------------------------------------------------------------------
